--- a/models_dir/atari_ppo/config.yaml
+++ b/models_dir/atari_ppo/config.yaml
@@ -56,7 +56,7 @@ networks:
             architecture:
                 cls_name: NatureCNN
                 cls_args: {img_channels: 4}
-                w_init_spec: ['xavier_uniform_', {}]
+                w_init_spec: ['orthogonal_', {gain: 1.4142}]  # sqrt 2
                 b_init_spec: ['zeros_', {}]
             predictors:
                 policy:
@@ -64,14 +64,14 @@ networks:
                     cls_args: {num_features: 512}
                     head_architecture_cls_name: Linear
                     head_architecture_cls_args: {}
-                    w_init_spec: ['normc_', {'gain': 0.01}]
+                    w_init_spec: ['orthogonal_', {'gain': 0.01}]
                     b_init_spec: ['zeros_', {}]
                 value_extrinsic:
                     cls_name: SimpleValueHead
                     cls_args: {num_features: 512}
                     head_architecture_cls_name: Linear
                     head_architecture_cls_args: {}
-                    w_init_spec: ['normc_', {'gain': 1.0}]
+                    w_init_spec: ['orthogonal_', {'gain': 0.01}]
                     b_init_spec: ['zeros_', {}]
         optimizer:
             cls_name: Adam
