--- a/models_dir/atari_rnd/config.yaml
+++ b/models_dir/atari_rnd/config.yaml
@@ -5,33 +5,35 @@ distributed:
     master_port: '12345'
 algo:
     cls_name: PPO
-    seg_len: 128
-    opt_epochs: 4
-    learner_batch_size: 32
-    clip_param_init: 0.1
-    clip_param_final: 0.1
-    ent_coef_init: 0.001
-    ent_coef_final: 0.001
-    vf_loss_coef: 0.5
-    vf_loss_cls: MSELoss
-    vf_loss_clipping: False
-    vf_simple_weighting: True  # Burda 2018 src code weights all vf losses same
-    credit_assignment_spec:
-        extrinsic:
-            cls_name: GAE
-            cls_args: {gamma: 0.999, lambda_: 0.95, use_dones: True}
-        intinsic_rnd:
-            cls_name: GAE
-            cls_args: {gamma: 0.99, lambda_: 0.95, use_dones: False}
-    standardize_adv: False
-    reward_weights:
-        extrinsic: 2.0
-        intrinsic_rnd: 1.0
-    use_pcgrad: False
-    stats_memory_len: 100
-    checkpoint_frequency: 100
-    non_learning_steps: 409600  # RNDWrapper nonlearning steps * world_size
-    max_steps: 500000000        # 0.5B
+    cls_args:
+        seg_len: 128
+        opt_epochs: 4
+        learner_batch_size: 32
+        clip_param_init: 0.1
+        clip_param_final: 0.1
+        ent_coef_init: 0.001
+        ent_coef_final: 0.001
+        vf_loss_coef: 0.5
+        vf_loss_cls: MSELoss
+        vf_loss_clipping: False
+        vf_simple_weighting: True  # Burda 2018 src code weights all vf losses same
+        credit_assignment_spec:
+            extrinsic:
+                cls_name: GAE
+                cls_args: {gamma: 0.999, lambda_: 0.95, use_dones: True}
+            intrinsic_rnd:
+                cls_name: GAE
+                cls_args: {gamma: 0.99, lambda_: 0.95, use_dones: False}
+        extra_steps: 0
+        standardize_adv: False
+        reward_weights:
+            extrinsic: 2.0
+            intrinsic_rnd: 1.0
+        use_pcgrad: False
+        stats_memory_len: 100
+        checkpoint_frequency: 100
+        non_learning_steps: 409600  # RNDWrapper nonlearning steps * world_size
+        max_steps: 500000000        # 0.5B
 env:
     wrappers:
         train:
