--- a/models_dir/atari_ppo/config.yml
+++ b/models_dir/atari_ppo/config.yml
@@ -24,7 +24,7 @@ algo:
         extra_steps: 0
         standardize_adv: True
         use_pcgrad: False
-        stats_memory_len: 100
+        stats_window_len: 100
         checkpoint_frequency: 25600
         non_learning_steps: 0
         max_steps: 10000000
