--- a/models_dir/debug/config.yaml
+++ b/models_dir/debug/config.yaml
@@ -1,9 +1,8 @@
-seed: 7357
 distributed:
     backend: gloo
     world_size: 1
     master_addr: localhost
-    master_port: '12333'
+    master_port: '12345'
 algo:
     cls_name: PPO
     cls_args:
@@ -57,7 +56,7 @@ networks:
             architecture:
                 cls_name: NatureCNN
                 cls_args: {img_channels: 4}
-                w_init_spec: ['xavier_uniform_', {}]
+                w_init_spec: ['orthogonal_', {gain: 1.4142}]  # sqrt 2
                 b_init_spec: ['zeros_', {}]
             predictors:
                 policy:
@@ -65,14 +64,14 @@ networks:
                     cls_args: {num_features: 512}
                     head_architecture_cls_name: Linear
                     head_architecture_cls_args: {}
-                    w_init_spec: ['normc_', {'gain': 0.01}]
+                    w_init_spec: ['orthogonal_', {'gain': 0.01}]
                     b_init_spec: ['zeros_', {}]
                 value_extrinsic:
                     cls_name: SimpleValueHead
                     cls_args: {num_features: 512}
                     head_architecture_cls_name: Linear
                     head_architecture_cls_args: {}
-                    w_init_spec: ['normc_', {'gain': 1.0}]
+                    w_init_spec: ['orthogonal_', {'gain': 0.01}]
                     b_init_spec: ['zeros_', {}]
         optimizer:
             cls_name: Adam
